demo get role - set up nav, footer

--- a/Web_TraSua_API/Web_TraSua_API/appsettings.json
+++ b/Web_TraSua_API/Web_TraSua_API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Server=HAIVAN\\SQLEXPRESS01;Database=Web_Tra_Sua_C6;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
