--- a/Web_TraSua_API/Web_TraSua_BlazorWeb/Web_TraSua_BlazorWeb.csproj
+++ b/Web_TraSua_API/Web_TraSua_BlazorWeb/Web_TraSua_BlazorWeb.csproj
@@ -20,10 +20,18 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="Components\Layout\NavWeb.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\" />
   </ItemGroup>
 
 </Project>
